修复了tasks.json缺少文件的问题。

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,7 @@
                 "HostCommunication.c",
                 "HostCommunicationUtils.c",
                 "HostCommunicationHooks.c",
+                "PublicCache.c",
                 "-o",
                 // "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "${fileDirname}\\main.exe",
